# mpl-theme-tweaker

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  desktop.ini  hook-mpl_theme_tweaker.py  main.py  matplotlibrc  mpl-theme-tweaker.spec  mpl_theme_tweaker.ini  mpl_theme_tweaker______.ini  pyproject.toml
src/mpl-theme-tweaker/: main.py
src/mpl_theme_tweaker/: app_utils.py  application.py  figure.py  figure_window.py  logger.py  main.py  mpl-theme-tweaker.spec  mpl_utils.py  opengl.py  params_window.py
src/mpl_theme_tweaker/image_combo/: image_combo.py
src/mpl_theme_tweaker/mpl_entry/: mpl_entry.py  section.py
src/mpl_theme_tweaker/style_manager/: style_manager.py
src/mpl_theme_tweaker/utils/: __init__.py  dpg.py  path.py
