[project]
name = "mpl-theme-tweaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pyinstaller>=6.16.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]
