[project]
name = "mpl-theme-tweaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imgui-bundle>=1.92.4",
    "matplotlib>=3.10.7",
    "pyinstaller>=6.16.0",
]

[project.scripts]
mpl-theme-tweaker = "mpl_theme_tweaker.main:main"
